--- a/style.css
+++ b/style.css
@@ -4,11 +4,20 @@
     padding: 0;
 }
 
+button {
+    padding: 2px 8px;
+    border-radius: 4px;
+    border: 2px solid red;
+    background-color: pink;
+    color: red;
+}
+
 body {
     display: flex;
+    flex-direction: column;
     height: 100vh;
     justify-content: center;
-    align-items: flex-end;
+    align-items: center;
     background-color: skyblue
 }
 
